@@ -7,6 +7,8 @@
 5. Tweak borders.
 6. Show track tech info, if enabled, for track list when click on album name
    in now-playing.
+7. Show background image, if enabled, for track list when click on album name
+   in now-playing.
 
 3.5.4
 -----
